# dataset-explorer

./: LICENSE  README.md  pyproject.toml  requirements.txt
assets/: synthetic_example.json
src/dataset_explorer/: __init__.py  cli.py
src/dataset_explorer/agent/: __init__.py  core.py
src/dataset_explorer/agent/tools/: __init__.py  rag_tools.py
src/dataset_explorer/app/: __init__.py  core.py  launcher.py  utils.py
src/dataset_explorer/core/: __init__.py  analyzer.py  configuration.py  rag.py  scouter.py  summarizer.py  utils.py  visualizer.py
src/dataset_explorer/models/: __init__.py  embedding.py  huggingface.py  inference.py  local.py  ollama.py  processing.py  watsonx.py
tests/: test_rag.py  test_utils.py
